--- a/client/index.html
+++ b/client/index.html
@@ -61,8 +61,6 @@
               <h4 class="card-title "></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
@@ -70,12 +68,9 @@
           <div class="card h-100 1">
             <a href="#"><img class="card-img-top" src="" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-              </h4>
+              <h4 class="card-title"></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
@@ -83,12 +78,9 @@
           <div class="card h-100 2">
             <a href="#"><img class="card-img-top" src="" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-              </h4>
+              <h4 class="card-title"></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
@@ -96,12 +88,9 @@
           <div class="card h-100 3">
             <a href="#"><img class="card-img-top" src="" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-              </h4>
+              <h4 class="card-title"></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
@@ -109,12 +98,9 @@
           <div class="card h-100 4">
             <a href="#"><img class="card-img-top" src="" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-              </h4>
+              <h4 class="card-title"></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
@@ -122,12 +108,9 @@
           <div class="card h-100 5">
             <a href="#"><img class="card-img-top" src="" alt=""></a>
             <div class="card-body">
-              <h4 class="card-title">
-              </h4>
+              <h4 class="card-title"></h4>
               <p class="card-text day"></p>
               <p class="card-text night"></p>
-              <p class="card-text wind"></p>
-              <p class="card-text humidity"></p>
             </div>
           </div>
         </div>
