--- a/client/index.html
+++ b/client/index.html
@@ -41,15 +41,13 @@
         <p class="humidity"></p>
       </div>
       <div class="center">
-        <div class="row">
-          <button type="button" class="btn btn-space btn-primary col-lg-5 col-sm-4 TLV" style="margin-right:10px; " >Tel-Aviv</button>
-          <button type="button" class="btn btn-space btn-primary col-lg-5 col-sm-4 NYC">New York</button>
-        </div>
+          <button type="button" class="btn btn-primary col-lg-5 col-sm-4 TLV">Tel-Aviv</button>
+          <button type="button" class="btn btn-primary col-lg-5 col-sm-4 NYC">New York</button>
     </div>
     <div class="center">
       <form class="form-inline">
-        <input type="text" class="form-control col-lg-5 col-sm-4" id="city" placeholder="Search diffrent city" style="margin-right:40px;">
-        <button type="button" class="btn btn-primary col-lg-4 col-sm-4 sub">Submit</button>
+        <input type="text" class="form-control col-lg-5 col-sm-5" id="city" placeholder="Search diffrent city" style="margin-right: 5px">
+        <button type="button" class="btn btn-primary col-lg-5 col-sm-4 sub">Submit</button>
       </form>
     </div>
       
